re PR target/11699 (internal compiler error, unrecognized instruction.)

PR target/11699
	* config/mips/mips.c (override_options): Reject -mabi=eabi -mabicalls.

From-SVN: r70274